--- a/src/main/webapp/pages/protocolo/list.xhtml
+++ b/src/main/webapp/pages/protocolo/list.xhtml
@@ -67,7 +67,8 @@
                                    process="@this" update="table estadoMany #{p:component('filtersWrapper')}"/>
                   <p:selectManyMenu id="estadoMany" value="#{protocoloCtrl.selectedEstados}" showCheckbox="true"
                                     styleClass="margin-top">
-                    <p:ajax event="change" process="@this" listener="#{protocoloCtrl.prepareSearch}" update="table #{p:component('filtersWrapper')}"/>
+                    <p:ajax event="change" process="@this" listener="#{protocoloCtrl.prepareSearch}"
+                            update="table #{p:component('filtersWrapper')}"/>
                     <f:selectItems value="#{protocoloCtrl.estados}" var="estado" itemLabel="#{estado.label}"
                                    itemValue="#{estado}"/>
                   </p:selectManyMenu>
@@ -85,7 +86,8 @@
                                   queryDelay="250"
                                   completeMethod="#{setorProtocoloCtrl.completeMethod}"
                                   placeholder="Digite o código ou o nome do setor.">
-                    <p:ajax event="itemSelect" listener="#{protocoloCtrl.prepareSearch}" update="table #{p:component('filtersWrapper')}"/>
+                    <p:ajax event="itemSelect" listener="#{protocoloCtrl.prepareSearch}"
+                            update="table #{p:component('filtersWrapper')}"/>
                     <p:column>
                       #{setor.id}
                     </p:column>
@@ -173,6 +175,7 @@
                             rendered="#{protocoloCtrl.renderResponserItem(item)}"
                             icon="fa fa-thumbs-up"/>
                 <p:menuitem value="Recusar" action="#{protocoloCtrl.preRecusar(item)}"
+                            ajax="true"
                             process="@this" update="#{p:component('novoComentarioDlg')}"
                             oncomplete="PF('novoComentarioDlg').show()"
                             disabled="#{protocoloCtrl.disableResponderItem(item)}"
@@ -180,27 +183,32 @@
                             icon="fa fa-thumbs-down"/>
                 <p:separator/>
                 <p:menuitem value="Novo comentário" action="#{protocoloCtrl.preComentario(item)}"
+                            ajax="true"
                             process="@this" update="#{p:component('novoComentarioDlg')}"
                             oncomplete="PF('novoComentarioDlg').show()"
                             icon="fa fa-comment"/>
                 <p:menuitem value="Histórico" action="#{protocoloCtrl.preHistorico(item)}"
+                            ajax="true"
                             process="@this" update="#{p:component('historicoDlgPnl')}"
                             onclick="openLoading();"
                             oncomplete="PF('historicoDlg').show(); closeLoading();"
                             icon="fa fa-tags"/>
                 <p:menuitem value="Comentários" action="#{protocoloCtrl.preOpenComentariosDlg(item)}"
+                            ajax="true"
                             process="@this"
                             update="#{p:component('comentariosDlgPnl')}"
                             onclick="openLoading();"
                             oncomplete="PF('comentariosDlg').show(); closeLoading();"
                             icon="fa fa-comments"/>
                 <p:menuitem value="Documentos" action="#{protocoloCtrl.preOpenDocumentosDlg(item)}"
+                            ajax="true"
                             process="@this" update="#{p:component('documentosDlgPnl')}"
                             onclick="openLoading();"
                             oncomplete="PF('documentosDlg').show(); closeLoading();"
                             icon="fa fa-file-text"/>
                 <p:separator rendered="#{sessionController.isUserInRoles('ADMINISTRATOR')}"/>
                 <p:menuitem value="Excluir" actionListener="#{protocoloCtrl.preDelete(item.id, index)}"
+                            ajax="true"
                             process="@this" update="#{p:component('deleteDlg')}" oncomplete="PF('deleteDlg').show()"
                             icon="fa fa-trash" rendered="#{sessionController.isUserInRoles('ADMINISTRATOR')}"/>
               </p:menuButton>
@@ -284,7 +292,8 @@
 
           <!-- DIÁLOGO DE EXCLUÇÃO -->
           <h:panelGroup layout="block" style="text-align: center; margin: 10px;">
-            <p:inputText id="deleteConfirmAnswer" value="#{protocoloCtrl.deleteConfirmAnswer}" style="text-transform: uppercase;">
+            <p:inputText id="deleteConfirmAnswer" value="#{protocoloCtrl.deleteConfirmAnswer}"
+                         style="text-transform: uppercase;">
               <p:ajax event="keyup" process="@this" update="deleteConfirmBtn" global="false"/>
             </p:inputText>
           </h:panelGroup>
@@ -396,7 +405,7 @@
                          rendered="#{not empty protocoloCtrl.documentosSelecionados.list}">
                 <p:tab title="#{item.entry.key}">
                   <p:dataTable id="docTable" value="#{item.entry.value}" var="doc"
-                               emptyMessage="Sem documentos selecionados"
+                               emptyMessage="Sem documentos para selecionar"
                                filteredValue="#{item.filtereds}"
                                selection="#{item.selecteds}"
                                selectionMode="multiple"
@@ -406,36 +415,79 @@
                                rows="10"
                                paginatorPosition="bottom"
                                sortBy="#{doc.dataHoraCriacao}" rowIndexVar="idx">
-                    <p:ajax event="filter" process="@this"/>
-                    <p:ajax event="rowSelect" listener="#{protocoloCtrl.selectRowRecebimento}" process="@this" update="@this #{p:component('registrarRecebBtn')}" />
-                    <p:ajax event="rowUnselect" listener="#{protocoloCtrl.unselectRow}" process="@this" update="@this #{p:component('registrarRecebBtn')}" />
-                    <p:column headerText="Cód." sortBy="#{doc.codigo}"
-                              width="175"
-                              styleClass="left-align" filterBy="#{doc.codigo}"
-                              filterStyle="display: inline-block;"
-                              filterMatchMode="contains">
+                    <p:ajax event="rowSelect"
+                            listener="#{protocoloCtrl.selectRowRecebimento}"
+                            process="@this"
+                            update="@this #{p:component('registrarRecebBtn')}"/>
+                    <p:ajax event="rowUnselect"
+                            listener="#{protocoloCtrl.unselectRow}"
+                            process="@this"
+                            update="@this #{p:component('registrarRecebBtn')}"/>
+                    <p:columnGroup type="header">
+                      <p:row>
+                        <p:column width="20"/>
+                        <p:column width="175"
+                                  sortBy="#{doc.codigo}"
+                                  headerText="Cód."
+                                  styleClass="left-align" filterBy="#{doc.codigo}"
+                                  filterStyle="display: inline-block;"
+                                  filterMatchMode="contains"/>
+                        <p:column headerText="Descrição/Conta"
+                                  sortBy="#{doc.descricao}"
+                                  styleClass="left-align ellipsis-text" width="300"/>
+                        <p:column headerText="#{protocoloCtrl.item.origem.nivel eq 'SECRETARIA' ? 'Conselho/Prestador' : 'Convênio/Atendimento'}"
+                                  sortBy="#{doc.consPrestConv}"
+                                  styleClass="left-align ellipsis-text"/>
+                        <p:column id="referenciaNaoRelac" headerText="Referência" sortBy="#{doc.dataReferencia}"
+                                  styleClass="left-align" width="90"/>
+                        <p:column id="criacaoNaoRelac" headerText="Criação" sortBy="#{doc.dataHoraCriacao}"
+                                  styleClass="left-align"
+                                  width="90"/>
+                        <p:column id="impressaoNaoRelac" headerText="Impressão" sortBy="#{doc.dataHoraImpressao}"
+                                  styleClass="left-align"
+                                  width="90"/>
+                      </p:row>
+                    </p:columnGroup>
+                    <p:column style="text-align: center;">
+                      <h:panelGroup styleClass="fa #{doc.selected ? 'fa-check-square-o' : 'fa-square-o'}"/>
+                    </p:column>
+                    <p:column>
                       <h:outputText value="#{doc.codigo}"/>
                     </p:column>
-                    <p:column headerText="Descrição" sortBy="#{doc.descricao}" styleClass="left-align ellipsis-text" width="200">
-                      <h:outputText id="recebDescri" value="#{doc.descricao}"/>
-                      <vah:toolTip id="recebDescriTooltip" for="#{p:component('recebDescri')}" value="#{doc.descricao}"
+                    <p:column styleClass="ellipsis-text">
+                      <h:panelGroup rendered="#{doc.tipo eq 'PROTOCOLO'}">
+                        <p:commandButton icon="fa fa-eye" value="#{doc.descricao}"
+                                         action="#{protocoloCtrl.visualizarDoc(doc)}"
+                                         onclick="openLoading();"
+                                         oncomplete="closeLoading(); PF('documentosDlg').show();"
+                                         process="@this" update="#{p:component('documentosDlgPnl')}"/>
+                      </h:panelGroup>
+                      <h:panelGroup rendered="#{doc.tipo ne 'PROTOCOLO'}">
+                        <h:outputText id="docTableDocDesc" value="#{doc.descricao}"/>
+                        <vah:toolTip id="docTableDocDescTip" for="#{p:component('docTableDocDesc')}"
+                                     value="#{doc.descricao}"
+                                     index="#{idx}"/>
+                      </h:panelGroup>
+                    </p:column>
+                    <p:column styleClass="ellipsis-text">
+                      <h:outputText id="consPrestConvNaoSelec" value="#{doc.consPrestConv}"/>
+                      <vah:toolTip id="consPrestConvNaoSelecTool" for="#{p:component('consPrestConvNaoSelec')}"
+                                   value="#{doc.consPrestConv}"
                                    index="#{idx}"/>
                     </p:column>
-                    <p:column headerText="#{doc.protocolo.origem.nivel eq 'SECRETARIA' ? 'Conselho/Prestador' : 'Convênio/Atendimento'}"
-                              sortBy="#{doc.consPresConv}"
-                              styleClass="left-align ellipsis-text">
-                      <h:outputText id="prest" value="#{doc.consPrestConv}"/>
-                      <vah:toolTip id="prestTooltip" for="#{p:component('prest')}" value="#{doc.consPrestConv}"
-                                   index="#{idx}"/>
-                    </p:column>
-                    <p:column headerText="Criação" sortBy="#{doc.dataHoraCriacao}" styleClass="left-align" width="90">
-                      <h:outputText value="#{doc.dataHoraCriacao}">
-                        <f:convertDateTime pattern="dd/MM/yy HH:mm"/>
+                    <p:column>
+                      <h:outputText value="#{doc.dataReferencia}">
+                        <f:convertDateTime pattern="dd/MM/yy" locale="pt_BR"/>
                       </h:outputText>
                     </p:column>
-                    <p:column headerText="Impressão" sortBy="#{doc.dataHoraImpressao}" styleClass="left-align" width="90">
+                    <p:column>
+                      <h:outputText value="#{doc.dataHoraCriacao}">
+                        <f:convertDateTime pattern="dd/MM/yy HH:mm" locale="pt_BR" timeZone="GMT-03:00"/>
+                      </h:outputText>
+                    </p:column>
+                    <p:column>
                       <h:outputText value="#{doc.dataHoraImpressao}">
-                        <f:convertDateTime pattern="dd/MM/yy HH:mm"/>
+                        <f:convertDateTime pattern="dd/MM/yy HH:mm" locale="pt_BR" timeZone="GMT-03:00"/>
                       </h:outputText>
                     </p:column>
                   </p:dataTable>
@@ -501,6 +553,9 @@
               <p:tab title="#{item.entry.key}">
                 <p:dataTable value="#{item.entry.value}" var="doc"
                              emptyMessage="Sem documentos"
+                             paginator="true"
+                             rows="10"
+                             paginatorPosition="bottom"
                              sortBy="#{doc.dataHoraCriacao}" rowIndexVar="idx">
 
                   <p:column headerText="Cód." width="50" styleClass="left-align">
@@ -511,8 +566,9 @@
                     <vah:toolTip id="docDescriTooltip" for="#{p:component('docDescri')}" value="#{doc.descricao}"
                                  index="#{idx}"/>
                   </p:column>
-                  <p:column headerText="#{doc.protocolo.origem.nivel eq 'SECRETARIA' ? 'Conselho/Prestador' : 'Convênio/Atendimento'}"
-                            styleClass="left-align ellipsis-text" width="250">
+                  <p:column
+                    headerText="#{doc.protocolo.origem.nivel eq 'SECRETARIA' ? 'Conselho/Prestador' : 'Convênio/Atendimento'}"
+                    styleClass="left-align ellipsis-text" width="250">
                     <h:outputText id="prestVis" value="#{doc.consPrestConv}"/>
                     <vah:toolTip id="prestVisTooltip" for="#{p:component('prestVis')}" value="#{doc.consPrestConv}"
                                  index="#{idx}"/>
