adicao de classes e regras para exibicao dos atenidmentos do paciente

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -10,7 +10,7 @@
 
 <head>
   <title><h:outputText value="#{msg.welcomeTitle}"/></title>
-  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css"/>
 </head>
 
 <body>
