--- a/src/main/webapp/pages/paciente/paciente.xhtml
+++ b/src/main/webapp/pages/paciente/paciente.xhtml
@@ -1,22 +1,34 @@
 <ui:composition template="/templates/layout.xhtml"
-                xmlns="http://www.w3.org/1999/xhtml"
-                xmlns:f="http://java.sun.com/jsf/core"
-                xmlns:h="http://java.sun.com/jsf/html"
-                xmlns:ui="http://java.sun.com/jsf/facelets"
-                xmlns:p="http://primefaces.org/ui">
-  <ui:define name="content">
+	xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui" xmlns:uivah="http://vah.com.br/vah"
+	xmlns:vah="http://java.sun.com/jsf/composite/vah">
+	<ui:define name="content">
+		<h:panelGrid id="grid" >
+		<p:panel id="tb">
+			<uivah:autoComplete id="setor" value="#{pacienteCtrl.item}"
+				label="Paciente: " controller="#{pacienteCtrl}"
+				completeMethod="completeMethod" converter="#{pacienteConverter}"
+				itemLabel="labelForSelectItem" placeholder="Cód./Nome">
+				<p:ajax event="itemSelect" process="@this" />
+				<p:column>
+                #{item.name}
+              </p:column>
+			</uivah:autoComplete>
+			
+			<p:commandButton id="prosseguirBtn" value="Prosseguir" actionListener="#{pacienteCtrl.onPacienteSelect()}"
+                         style="font-size: 25px; margin-top: 25px" process="@all" update="grid"/>
+		</p:panel>
+		<p:dataTable id="tbAtendimentos" widgetVar="tbAtendimentos" var="paciente" value="#{pacienteCtrl.paciente.atendimentos}"
+					 paginator="true" rows="10" rendered="#{not empty pacienteCtrl.paciente.atendimentos}">
+				<p:column headerText="Atendimentos">
+					<p:outputLabel value="#{paciente.labelForSelectItem}" />
+				</p:column>
+			</p:dataTable>
+		</h:panelGrid>
 
-    <div class="homeWrapper">
-      <div class="home">
-        <div class="homeImgWrapper">
-          <h:graphicImage library="img" name="logo.png" height="50" />
-        </div>
-        <div class="masthead">
-          <h1>Sistema Guia</h1>
-        </div>
-      </div>
-    </div>
-
-  </ui:define>
+	</ui:define>
 
 </ui:composition>
