--- a/src/main/webapp/pages/protocolo/list.xhtml
+++ b/src/main/webapp/pages/protocolo/list.xhtml
@@ -113,6 +113,8 @@
                             rendered="#{item.estado eq 'RECEBIDO'}"/>
               <h:panelGroup style="font-size: 20px; color: #8d272e;" styleClass="fa fa-thumbs-down"
                             rendered="#{item.estado eq 'RECUSADO'}"/>
+              <h:panelGroup style="font-size: 20px; color: #ff9540;" styleClass="fa fa-archive"
+                            rendered="#{item.estado eq 'ARQUIVADO'}"/>
             </p:column>
 
 
