--- a/src/main/webapp/pages/same/arquivo.xhtml
+++ b/src/main/webapp/pages/same/arquivo.xhtml
@@ -3,8 +3,100 @@
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
+                xmlns:uivah="http://vah.com.br/vah"
                 xmlns:vah="http://java.sun.com/jsf/composite/vah">
-
+    <h:panelGroup id="arquivosSearchParams" layout="block" style="margin: 5px 0;">
+        <h:panelGrid columns="3" rendered="#{protocoloCtrl.item.origem.nivel ne 'SECRETARIA'}">
+            <p:outputLabel value="Contas:" styleClass="lance-label"/>
+            <p:inputText id="listaContas" value="#{sameCtrl.listaContas}"
+                         placeholder="Contas separadas por ';'" style="width: 450px;"/>
+            <h:panelGroup/>
+            <uivah:autoComplete id="convenio" value="#{sameCtrl.convenio}" label="Convênio:"
+                                controller="#{convenioCtrl}" completeMethod="completeMethod"
+                                converter="#{convenioConverter}" itemLabel="labelForSelectItem"
+                                styleClass="client-input"
+                                placeholder="Convênio...">
+                <p:ajax event="itemSelect" listener="#{protocoloCtrl.recuperarDadosRascunho}"
+                        process="@this" update="@form"/>
+                <p:column width="75">
+                    #{item.id}
+                </p:column>
+                <p:column>
+                    #{item.title}
+                </p:column>
+            </uivah:autoComplete>
+        </h:panelGrid>
+        <p:commandButton id="arquivosSearchBtn" value="Buscar" action="#{sameCtrl.buscarPendentes}"
+                         process="arquivosSearchParams"
+                         update="arquivosTable"/>
+    </h:panelGroup>
+    <h:panelGroup id="arquivosTablePnl" layout="block" style="margin: 5px 0;">
+        <p:dataTable id="arquivosTable" value="#{sameCtrl.arquivados}"
+                     var="doc"
+                     rowKey="#{doc.rowKey}"
+                     rowSelectMode="checkbox"
+                     paginator="true"
+                     rows="20"
+                     paginatorPosition="bottom"
+                     sortBy="#{doc.dataHoraCriacao}" rowIndexVar="idx"
+                     emptyMessage="Busque por items"
+                     selectionMode="multiple"
+                     selection="#{sameCtrl.selecteds}"
+                     filteredValue="#{sameCtrl.filtereds}">
+            <f:facet name="header">
+                <h:panelGroup layout="block">
+                    <h:outputText value="Documentos Pendentes - "/>
+                    <h:outputText id="arquivosSelectCount"
+                                  value="#{sameCtrl.arquivosSelectCount} marcado(s)"/>
+                </h:panelGroup>
+            </f:facet>
+            <p:ajax event="rowSelect"
+                    listener="#{sameCtrl.arquivosSelectRow}"
+                    process="@this"
+                    update="@this arquivosSelectCount #{p:component('arquivoActionsPnl')}"/>
+            <p:ajax event="rowUnselect"
+                    listener="#{sameCtrl.unselectRow}"
+                    process="@this"
+                    update="@this arquivosSelectCount #{p:component('arquivoActionsPnl')}"/>
+            <p:columnGroup type="header">
+                <p:row>
+                    <p:column width="20"/>
+                    <p:column id="descNaoRelac" headerText="Conta"
+                              sortBy="#{doc.descricao}"
+                              filterBy="#{doc.descricao}"
+                              filterStyle="display: inline-block;"
+                              filterMatchMode="contains"
+                              styleClass="left-align ellipsis-text" width="300"/>
+                    <p:column id="consPrestConvNaoRelac"
+                              headerText="Convênio/Atendimento"
+                              sortBy="#{doc.consPrestConv}"
+                              styleClass="left-align ellipsis-text"/>
+                    <p:column width="120"/>
+                </p:row>
+            </p:columnGroup>
+            <p:column style="text-align: center;">
+                <h:panelGroup styleClass="fa #{doc.selected ? 'fa-check-square-o' : 'fa-square-o'}"/>
+            </p:column>
+            <p:column>
+                <p:commandButton icon="fa fa-eye" value="#{doc.descricao}"
+                                 action="#{sameCtrl.visualizarDoc(doc)}"
+                                 onclick="openLoading();"
+                                 oncomplete="closeLoading(); PF('documentosDlg').show();"
+                                 process="@this" update="#{p:component('documentosDlgPnl')}"/>
+            </p:column>
+            <p:column styleClass="ellipsis-text">
+                <h:outputText id="consPrestConvNaoSelec" value="#{doc.consPrestConv}"/>
+                <vah:toolTip id="consPrestConvNaoSelecTool" for="#{p:component('consPrestConvNaoSelec')}"
+                             value="#{doc.consPrestConv}"
+                             index="#{idx}"/>
+            </p:column>
+            <p:column style="text-align: center;">
+                <h:panelGroup>
+                    <p:commandButton icon="fa fa-search" value="Sumário" ajax="true"/>
+                </h:panelGroup>
+            </p:column>
+        </p:dataTable>
+    </h:panelGroup>
 
 
 </ui:composition>
